looked at boundary behaviour numerically. Wrote report.

--- a/report/report.bib
+++ b/report/report.bib
@@ -90,3 +90,29 @@ author = "Peter Breitenlohner and Daniel Z. Freedman"
       reportNumber   = "PUPT-2255",
       SLACcitation   = "%%CITATION = ARXIV:0801.2977;%%",
 }
+@article{PhysRevD.15.2752,
+  title = {Action integrals and partition functions in quantum gravity},
+  author = {Gibbons, G. W. and Hawking, S. W.},
+  journal = {Phys. Rev. D},
+  volume = {15},
+  issue = {10},
+  pages = {2752--2756},
+  year = {1977},
+  month = {May},
+  doi = {10.1103/PhysRevD.15.2752},
+  url = {http://link.aps.org/doi/10.1103/PhysRevD.15.2752},
+  publisher = {American Physical Society}
+}
+@article{PhysRevLett.28.1082,
+  title = {Role of Conformal Three-Geometry in the Dynamics of Gravitation},
+  author = {York, James W.},
+  journal = {Phys. Rev. Lett.},
+  volume = {28},
+  issue = {16},
+  pages = {1082--1085},
+  year = {1972},
+  month = {Apr},
+  doi = {10.1103/PhysRevLett.28.1082},
+  url = {http://link.aps.org/doi/10.1103/PhysRevLett.28.1082},
+  publisher = {American Physical Society}
+}
